--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 <body>
     <div>
         
-     <h1> Axror salom </h1>
-       <h1> Marufjon </h1>
-       <h1> dell </h1>
-      <h2>zubaydullo</h2>
+       <h1> Axror salom  index.html </h1>
+       <h2>zubaydullo about.html</h2>
 
-
-        
- 
 </body>
 </html>
