--- a/about.html
+++ b/about.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h3>zubaydullo 15</h3>
     <a href="./index.html"> o'tish</a>
+
+<div id="ter">
+
+    <div class="friton1"></div>
+    <div class="friton2"></div>
+<!-- <div class="check">
+<h5>summa</h5>
+<h5>ismi :Murodullayev</h5>
+<h5> karta turi : uzkard</h5>
+<h5>karta raqami : 9860 7643 8265 0078</h5>
+<h6>kesh back: </h6> -->
+<!-- </div> -->
+    <div class="fri">
+<input type="text" id="bert" placeholder="1000000">
+<button class="delta" onclick="bool(1)">1</button>
+<button class="delta" onclick="bool(2)">2</button>
+<button class="delta" onclick="bool(3)">3</button>
+<button class="delta" onclick="bool(4)">4</button>
+<button class="delta" onclick="bool(5)">5</button>
+<button class="delta" onclick="bool(6)">6</button>
+<button class="delta" onclick="bool(7)">7</button>
+<button class="delta" onclick="bool(8)">8</button>
+<button class="delta" onclick="bool(9)">9</button>
+<button class="delta" onclick="bool(0)">0</button>
+<button class="delta" onclick="bool1()">X</button>
+</div>
+<button class="oplata">enter</button>
+</div>
+
+<script src="./gag.js"></script>
 </body>
 </html>
