--- a/about.html
+++ b/about.html
@@ -10,19 +10,20 @@
 <body>
     <h3>zubaydullo 15</h3>
     <a href="./index.html"> o'tish</a>
-
+<div class="check">
+<h6 id="fif1"></h6>
+<h6>ismi :Murodullayev</h6>
+<h6> karta turi : uzkard</h6>
+<h6> 9860 7643 8265 0078</h6>
+<h6>kesh back:1.25% </h6>
+<h6 id="fif2"></h6>
+ </div> 
 <div id="ter">
 
     <div class="friton1"></div>
     <div class="friton2"></div>
-<!-- <div class="check">
-<h5>summa</h5>
-<h5>ismi :Murodullayev</h5>
-<h5> karta turi : uzkard</h5>
-<h5>karta raqami : 9860 7643 8265 0078</h5>
-<h6>kesh back: </h6> -->
-<!-- </div> -->
-    <div class="fri">
+
+    <div class="fri1">
 <input type="text" id="bert" placeholder="1000000">
 <button class="delta" onclick="bool(1)">1</button>
 <button class="delta" onclick="bool(2)">2</button>
@@ -35,10 +36,15 @@
 <button class="delta" onclick="bool(9)">9</button>
 <button class="delta" onclick="bool(0)">0</button>
 <button class="delta" onclick="bool1()">X</button>
-</div>
-<button class="oplata">enter</button>
+<button class="oplata" onclick="chek()">enter</button>
 </div>
 
+</div>
+<div  class="karta">
+<img src="./MIR_NBU-1.png" alt="bu yerda rasm bor">
+
+</div>
+<button  onclick="bit()">kartani tiqish</button>
 <script src="./gag.js"></script>
 </body>
 </html>
